--- a/app/src/main/res/drawable/elevation.xml
+++ b/app/src/main/res/drawable/elevation.xml
@@ -3,7 +3,10 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
-            <corners android:radius="2dp" />
+            <corners android:bottomLeftRadius="7dp"
+                android:bottomRightRadius="7dp"
+                android:topLeftRadius="7dp"
+                android:topRightRadius="7dp" />
         </shape>
     </item>
 </layer-list>
