--- a/app/src/main/res/layout/list_of_sops.xml
+++ b/app/src/main/res/layout/list_of_sops.xml
@@ -6,27 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".ListofSOPs.ListofSOPs">
 
-    <TextView
-        android:id="@+id/listsop_categorytitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="List of House SOPs"
-        style="@style/ConstraintCenterHorizontal"
-        android:textSize="28sp"/>
     
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_list_of_sops"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="12dp"
-        app:layout_constraintTop_toBottomOf="@id/listsop_categorytitle"/>
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/no_bookmarked"
+        style="@style/ConstraintCenter"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="No Handbooks bookmarked"
+        android:textSize="21sp"
+        android:visibility="gone"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_addsop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:srcCompat="@drawable/ic_action_add"
+        app:srcCompat="@drawable/ic_book"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
