--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -5,33 +5,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Steps.StepActivity"
-    android:layout_margin="8dp">
+    android:background="@drawable/pagebkg"
+    android:padding="8dp">
 
     <!--THINGS I WANT TO SHOW (STEP TITLE, PICTURE, DESCRIPTION, STEP NUMBER-->
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.13" />
 
     <TextView
         android:id="@+id/textview_step_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="This is a sample of step title"
-        style="@style/ConstraintCenterHorizontal"
         android:textSize="21sp"
-        android:padding="8dp"/>
+        app:layout_constraintBottom_toTopOf="@id/guideline2"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="This is a sample of step title" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintBottom_toTopOf="@id/guideline2"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 
     <ImageView
         android:id="@+id/imageview_step_picture"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="200dp"
         tools:src="@drawable/mysop_logo"
-        app:layout_constraintTop_toBottomOf="@id/textview_step_title"
-        android:contentDescription="picture" />
+        android:layout_margin="12dp"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline2" />
 
     <TextView
         android:id="@+id/textview_step_description"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="hjedjfweckjwlenclkfwn"
+        android:layout_marginTop="12dp"
+        android:textSize="18sp"
         android:padding="8dp"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageview_step_picture"/>
 
     <android.support.design.widget.FloatingActionButton
@@ -42,5 +69,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ic_action_edit"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1" />
 
 </android.support.constraint.ConstraintLayout>
