--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -28,17 +28,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="This is a sample of step title" />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@id/guideline2"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-
     <ImageView
         android:id="@+id/imageview_step_picture"
         android:layout_width="wrap_content"
@@ -61,20 +50,38 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageview_step_picture"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_step_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_action_edit"/>
-
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.1" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_step_description">
+
+    <Button
+        android:id="@+id/button_page_prev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:text="prev"/>
+
+        <Button
+            android:id="@+id/button_page_next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:text="next"/>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
