--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/pagebkg">
+
+<android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Steps.StepActivity"
-    android:background="@drawable/pagebkg"
     android:padding="8dp">
 
     <!--THINGS I WANT TO SHOW (STEP TITLE, PICTURE, DESCRIPTION, STEP NUMBER-->
@@ -85,3 +90,4 @@
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
+    </ScrollView>
