--- a/app/src/main/res/layout/add_step.xml
+++ b/app/src/main/res/layout/add_step.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentBottom="true">
+
+<android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp">
 
     <TextView
@@ -56,54 +62,59 @@
 
     <ImageView
         android:id="@+id/imageview_add_step_image_preview"
+        style="@style/ConstraintCenterHorizontal"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_margin="6dp"
-        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_gallery"
         android:visibility="gone"
-        style="@style/ConstraintCenterHorizontal"/>
+        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_gallery" />
 
     <EditText
         android:id="@+id/edittext_add_step_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/description_border"
         android:gravity="top|left"
+        android:hint="Add description of step"
         android:inputType="textMultiLine"
         android:maxLines="10"
-        android:layout_marginTop="8dp"
         android:padding="6dp"
-        android:background="@drawable/description_border"
         android:scrollbars="vertical"
-        android:hint="Add description of step"
-        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_image_preview"/>
+        app:layout_constraintTop_toBottomOf="@id/imageview_add_step_image_preview" />
 
-    <Button
-        android:id="@+id/button_add_sop_another_step"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="add another step"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/button_add_sop_save"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_description" />
+        android:layout_margin="12dp"
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_step_description">
 
-    <Button
-        android:id="@+id/button_add_sop_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Complete SOP"
-        app:layout_constraintLeft_toRightOf="@id/button_add_sop_another_step"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_add_step_description" />
+        <Button
+            android:id="@+id/button_add_sop_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:layout_weight="1"
+            android:text="Complete SOP"/>
+
+        <Button
+            android:id="@+id/button_add_sop_another_step"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:layout_weight="1"
+            android:text="add another step"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_add_step_save_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save step"
         android:layout_margin="16dp"
+        android:text="Save step"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/edittext_add_step_description"/>
+        app:layout_constraintTop_toBottomOf="@id/edittext_add_step_description" />
 
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
