--- a/app/src/main/res/menu/step_menu.xml
+++ b/app/src/main/res/menu/step_menu.xml
@@ -5,5 +5,10 @@
         android:id="@+id/menu_step_edit_step"
         android:orderInCategory="100"
         android:title="Edit Step" />
+    <item
+        android:id="@+id/menu_step_delete"
+        android:orderInCategory="100"
+        android:title="Delete Step" />
+
 
 </menu>
