--- a/app/src/main/res/layout/firebase.xml
+++ b/app/src/main/res/layout/firebase.xml
@@ -13,19 +13,28 @@
         android:text="FireBase"
         android:textSize="32sp"/>
 
+    <TextView
+        android:id="@+id/firebase_username_label"
+        style="@style/ConstraintCenterHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:text="Create a unique username. Must be one word."
+        app:layout_constraintTop_toBottomOf="@id/label"/>
+
     <EditText
         android:id="@+id/edittext_firebase_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="UserName"
-        app:layout_constraintTop_toBottomOf="@id/label"/>
+        android:hint="User Name"
+        app:layout_constraintTop_toBottomOf="@id/firebase_username_label"/>
 
 
     <Button
         android:id="@+id/button_share"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create account"
+        android:text="Create User name"
         app:layout_constraintTop_toBottomOf="@id/edittext_firebase_username"/>
 
 </android.support.constraint.ConstraintLayout>
