--- a/app/src/main/res/layout/share_with_users.xml
+++ b/app/src/main/res/layout/share_with_users.xml
@@ -3,13 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp">
+
+    <TextView
+        android:id="@+id/tv_share_display_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:padding="4dp"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="UserName is phil"/>
 
     <EditText
         android:id="@+id/edittext_share_search_users"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Search Users"/>
+        android:hint="Search Users"
+        app:layout_constraintTop_toBottomOf="@id/tv_share_display_name"/>
 
     <Button
         android:id="@+id/button_share_search"
