--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/logoBlueBookColor"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/radius_corners"
     android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/widget_book_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="List of shelfs"
-        android:textSize="32sp"/>
+        android:textSize="21sp"
+        tools:text="Maggie Handbook"/>
 
     <ListView
         android:id="@+id/widget_recycler"
