--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/widgetIngredient"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="6dp"
-    android:textColor="@color/text"
-    android:textSize="18sp"
-    tools:text="@string/app_name" />
+    android:orientation="horizontal"
+    android:padding="6dp">
+
+    <TextView
+        android:id="@+id/widget_page_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="6dp"
+        android:paddingRight="12dp"
+        android:textColor="@color/text"
+        android:textSize="21sp"
+        android:textStyle="bold"
+        tools:text="1..."/>
+
+    <TextView
+        android:id="@+id/widget_page_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="6dp"
+        android:textColor="@color/text"
+        android:textSize="18sp"
+        tools:text="@string/app_name" />
+
+
+</LinearLayout>
