--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,12 +42,12 @@
                 android:numColumns="2"/>
 
         </ScrollView>
-
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/ConstraintCenter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+<!--TODO PRPGRESSBAR-->
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progress_bar"-->
+            <!--style="@style/ConstraintCenter"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"/>-->
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
