--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -35,7 +35,7 @@
 
     <ImageView
         android:id="@+id/imageview_step_picture"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         tools:src="@drawable/mysop_logo"
         android:layout_margin="12dp"
