--- a/app/src/main/res/layout/books_list_layout.xml
+++ b/app/src/main/res/layout/books_list_layout.xml
@@ -7,101 +7,100 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
-    <RelativeLayout
-        android:id="@+id/relativelayout_bookimage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:paddingBottom="8dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageview_handbook"
+        <RelativeLayout
+            android:id="@+id/relativelayout_bookimage"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:paddingBottom="8dp">
+
+            <ImageView
+                android:id="@+id/imageview_handbook"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/handbook"
+                android:src="@drawable/handbook" />
+
+            <ImageView
+                android:id="@+id/image_booklist_saved"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="40dp"
+                android:contentDescription="@string/bookmark"
+                android:src="@drawable/baseline_bookmark_border_black_36dp" />
+
+            <TextView
+                android:id="@+id/book_shared_by"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:text="@string/shared_by"
+                android:textColor="@color/text"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/book_shared_by_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/book_shared_by"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/text"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:text="Bug" />
+
+            <ImageView
+                android:id="@+id/image_booklist_options"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="25dp"
+                android:contentDescription="@string/book_options"
+                android:src="@drawable/ic_action_overflow" />
+
+            <ImageView
+                android:id="@+id/image_booklist_shared"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="35dp"
+                android:contentDescription="@string/book_shared"
+                android:src="@drawable/ic_action_share"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/text_booklist_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/handbook"
-            android:src="@drawable/handbook" />
-
-        <ImageView
-            android:id="@+id/image_booklist_saved"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="40dp"
-            android:contentDescription="@string/bookmark"
-            android:src="@drawable/baseline_bookmark_border_black_36dp" />
-
-        <TextView
-            android:id="@+id/book_shared_by"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
-            android:text="@string/shared_by"
+            android:maxLines="2"
             android:textColor="@color/text"
-            android:textStyle="bold"
-            android:visibility="gone"/>
+            android:textSize="21sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintLeft_toRightOf="@id/relativelayout_bookimage"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Air Filter" />
 
-        <TextView
-            android:id="@+id/book_shared_by_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/book_shared_by"
-            android:layout_centerHorizontal="true"
-            android:textColor="@color/text"
-            android:textStyle="bold"
-            android:visibility="gone"
-            tools:text="Bug"/>
-
-        <ImageView
-            android:id="@+id/image_booklist_options"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="25dp"
-            android:contentDescription="@string/book_options"
-            android:src="@drawable/ic_action_overflow" />
-
-        <ImageView
-            android:id="@+id/image_booklist_shared"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="35dp"
-            android:src="@drawable/ic_action_share"
-            android:contentDescription="@string/book_shared"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/text_booklist_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/text"
-        android:textSize="21sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintLeft_toRightOf="@id/relativelayout_bookimage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Air Filter"/>
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="1dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"/>
+    </LinearLayout>
 
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
